--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,33 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Roboto, sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
 
+.container {
+  max-width: 1128px;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .logo-word {
   font-family: Raleway, sans-serif;
   font-size: 18px;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
   color: #4d5ae5;
+  align-self: center;
 }
 .logo-piece-up {
   color: #2e2f42;
@@ -22,14 +36,58 @@ body {
   color: #f4f4fd;
 }
 
-/*Header*/
-
-ul {
-  list-style: none;
+.header-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+address,
+nav,
+.navigation-list,
+.address-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.navigation-list {
+  margin-left: 76px;
+  padding: 24px 0;
+  flex-wrap: wrap;
+}
+
+.navigation-list,
+.address-list {
+  gap: 40px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
 a {
   text-decoration: none;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/*Header*/
 
 .nav-link {
   color: #2e2f42;
@@ -49,7 +107,7 @@ address {
   font-style: normal;
 }
 .contact {
-  color: #434455;
+  color: currentColor;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -64,18 +122,26 @@ address {
 /***********/
 
 /*Main*/
+
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
+}
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero-text {
   color: #fff;
   text-align: center;
   font-size: 56px;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
+  margin-bottom: 48px;
 }
 
 .hero-button {
@@ -83,24 +149,42 @@ address {
   font-family: Roboto, sans-serif;
   color: #fff;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px;
   letter-spacing: 0.64px;
   cursor: pointer;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: #404bbf;
 }
 
+.topics {
+  padding: 120px 0;
+}
+
+.advantages-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+.advantages-topics {
+  width: calc((100% - 72px) / 4);
+}
+
 .advantages,
-.team-list,
+.team-text,
 .portfolio {
   color: #2e2f42;
   text-align: center;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.72px;
@@ -112,7 +196,6 @@ address {
 .name-thing {
   color: #2e2f42;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
@@ -122,7 +205,6 @@ address {
 .profesional,
 .portfolio-text {
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
@@ -130,9 +212,58 @@ address {
 
 .team {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
+
+.team-text {
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.worker-text {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+  padding: 32px;
+}
+
 .worker {
-  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  background: #fff;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-page {
+  padding: 120px 0;
+}
+
+.portfolio {
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.portfolio-text-together {
+  border: 1px solid #e7e9fc;
+  border-top: 0;
+  background: #fff;
+  padding: 32px 16px;
+}
+
+.name-thing {
+  margin-bottom: 8px;
 }
 
 /***********/
@@ -142,6 +273,10 @@ footer {
   background-color: #2e2f42;
 }
 
+.end-item {
+  padding: 101.5px 0 100px 0;
+}
+
 .down-text {
   color: #f4f4fd;
   font-size: 16px;
@@ -149,6 +284,8 @@ footer {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
+  margin-top: 17.5px;
+  width: 264px;
 }
 
 /***********/
