--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@ body {
 
 .container {
   max-width: 1158px;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -59,7 +59,7 @@ body {
   gap: 40px;
 }
 
-.navigation-link {
+.navigation {
   /*     */
   padding: 24px 0;
 }
@@ -192,15 +192,21 @@ address {
   gap: 24px;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0;
   padding: 0;
+  margin: 0;
+}
+
+.mini-topic {
+  margin-bottom: 8px;
 }
 
 .advantages-topics {
+  margin: 0;
+  padding: 0;
   width: calc((100% - 72px) / 4);
 }
 
-.advantages,
+.visually-hidden,
 .team-text,
 .portfolio {
   color: #2e2f42;
@@ -246,12 +252,16 @@ address {
   justify-content: center;
 }
 
+.human-worker {
+  margin-bottom: 8px;
+  text-align: center;
+}
+.profesional {
+  text-align: center;
+}
+
 .worker-text {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  align-items: center;
-  padding: 32px;
+  padding: 32px 0;
 }
 
 .worker {
@@ -260,6 +270,7 @@ address {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  width: calc((100% - 72px) / 4);
 }
 
 .portfolio-page {
@@ -274,6 +285,7 @@ address {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-text-together {
@@ -287,6 +299,9 @@ address {
   margin-bottom: 8px;
 }
 
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
 /***********/
 
 /*Fotter*/
