--- a/css/styles.css
+++ b/css/styles.css
@@ -305,12 +305,14 @@ address {
 /***********/
 
 /*Fotter*/
-footer {
+.this-is-footi {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
-.end-item {
-  padding: 101.5px 0 100px 0;
+.down-word {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .down-text {
@@ -320,8 +322,7 @@ footer {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
-  margin-top: 17.5px;
-  width: 264px;
+  max-width: 264px;
 }
 
 /***********/
