Add some things

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,6 @@ body {
 
 .navigation-list {
   gap: 40px;
-}
-
-.navigation {
-  /*     */
   padding: 24px 0;
 }
 
@@ -216,6 +212,19 @@ address {
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .mini-topic,
